// Licensed to Elasticsearch B.V. under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. Elasticsearch B.V. licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package elastic.apm.v1;

import "google/protobuf/struct.proto";
import "headers.proto";
import "keyvalue.proto";

option go_package = "github.com/elastic/apm-data/model/modelpb";

message HTTP {
  HTTPRequest request = 1;
  HTTPResponse response = 2;
  string version = 3;
}

message HTTPRequest {
  google.protobuf.Value body = 1;
  repeated HTTPHeader headers = 2;
  repeated KeyValue env = 3;
  repeated KeyValue cookies = 4;
  string id = 5;
  string method = 6;
  string referrer = 7;
}

message HTTPResponse {
  repeated HTTPHeader headers = 1;
  optional bool finished = 2;
  optional bool headers_sent = 3;
  optional uint64 transfer_size = 4;
  optional uint64 encoded_body_size = 5;
  optional uint64 decoded_body_size = 6;
  uint32 status_code = 7;
}
